# slothy

./: .buildinfo  .flake8  .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELICENSE  cryptoline.py  debug.txt  doc.md  example.py  faq.html  flake.nix  general.html  genindex.html  index.html  init.sh  measurements.py  nelight72-cli  objects.inv  py-modindex.html  pyproject.toml  regression.py  requirements.txt  search.html  searchindex.js  slothy-a55-cli  slothy-big-cli  slothy-cli  slothy-m55-cli  slothy-m85-cli  slothy-n1-cli  test  test.py  todo.md  uarch.md
.doctrees/: faq.doctree  general.doctree
.doctrees/apidocs/: index.doctree
.doctrees/tutorial/: README.doctree
.githooks/: git-hooks-config.sh  linting  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: linting.yml  pytest.yml  python.yml  sphinx-build-deploy  sphinx-build-deploy.yml  test_basic.yaml
_sources/: general.md.txt
_sources/apidocs/: index.rst.txt
_sources/tutorial/: README.md.txt
apidocs/: index.html
apidocs/slothy/: slothy.cli.html  slothy.core.config.html  slothy.html  (+38 more)
common/: OptimizationRunner.py
docs/: _config.yaml  faq.md  index.md
logs/: ntt_dilithium_1234_5678_m1_firestorm_layer1234_start_slothy_ERROR.s
paper/: README.md  slothy_dilithium_ntt_a55.sh  slothy_dilithium_ntt_a72.sh  slothy_fft.sh  slothy_kyber_ntt_a55.sh  slothy_kyber_ntt_a72.sh  slothy_sqmag.sh  slothy_x25519.sh
rvv_run_logs/: summary.txt
scripts/: README.md  helight_fft.sh  helight_sqmag.sh  nelight_dilithium_ntt_a55.sh  nelight_dilithium_ntt_a72.sh  nelight_dilithium_ntt_x1.sh  nelight_kyber_ntt_a55.sh  nelight_kyber_ntt_a72.sh  nelight_kyber_ntt_x1.sh  nelight_x25519.sh  run_rvv_examples.sh  slothy_dilithium_ntt_a55.sh  slothy_kyber_ntt_a55.sh  slothy_kyber_ntt_a72.sh  slothy_sqmag.sh  slothy_x25519.sh
slothy/: __init__.py  config.py  core.py  dataflow.py  helper.py  heuristics.py  slothy.py
submodules/: 0001-Pin-pybind11_protobuf-commit-in-cmake-files.patch  setup-ortools.sh
targets/: query.py
tutorial/: README.html  README.md  X25519-AArch64-simple_opt.s  aarch64_simple0_loop_mca_a55.s  tutorial-3-macros.py  tutorial-3.py  tutorial-3a.py  tutorial-3b.py  tutorial-4.py  tutorial-5.py  tutorial-6.py  tutorial-7.py  tutorial_all.sh
tutorial_files/: tutorial-3a.py  tutorial-3b.py  tutorial-6.py  tutorial-7.py
(+1172 files in other folders)
